Do add localisation

--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -1,1 +1,24 @@
-application_name=ShoppingListGenerator
+dish=Dish
+dishes=Dish
+ingredient=Ingredient
+ingredients=Ingredients
+about=About
+settings=Settings
+back=Back
+forward=Forward
+sort=Sort
+add=Add
+change=Change
+remove=Remove
+quit=Quit
+apply=Apply
+warning=Warning
+information=Information
+no_database_driver_available Database driver not available.
+connection_to_database_not_possible Connection to database not possible.
+element_already_available Element is already available.
+all_fields_must_be_filled All fields must be filled in.
+removing_not_possible Removing is not possible.
+adding_not_possible Add is not possible.
+changing_not_possible Changing is not possible.
+saving_not_possible Saving is not possible.
