Do add localisation strings

--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -14,11 +14,43 @@ quit=Quit
 apply=Apply
 warning=Warning
 information=Information
-no_database_driver_available Database driver not available.
-connection_to_database_not_possible Connection to database not possible.
-element_already_available Element is already available.
-all_fields_must_be_filled All fields must be filled in.
-removing_not_possible Removing is not possible.
-adding_not_possible Add is not possible.
-changing_not_possible Changing is not possible.
-saving_not_possible Saving is not possible.
+no_database_driver_available=Database driver not available
+connection_to_database_not_possible=Connection to database not possible
+element_already_available Element is already available
+all_fields_must_be_filled All fields must be filled in
+removing_not_possible Removing is not possible
+adding_not_possible Add is not possible
+changing_not_possible Changing is not possible
+saving_not_possible Saving is not possible
+switch_application_theme=Switch application theme
+application_name=ShoppingListGenerator
+please_restart_application=Please restart the application
+reset_application=Reset application
+version=Version 2021.1
+steven_solleder=Steven Solleder
+isabell_waas=Isabell Waas
+steven_solleder_link=https://stevensolleder.de
+isabell_waas_link=https://github.com/isabellwaas
+create=Create
+edit=Edit
+loading_not_possible=Loading not possible
+shopping_list=Shopping List
+uri_can_not_be_opened=Link can not be opened
+copy_to_clipboard=Copy to clipboard
+save_on_computer=Save on computer
+shelf=Shelf
+name=Name
+store=Store
+spaghetti=Spaghetti
+pizza=Pizza
+bolognese_sauce=Bolognese sauce
+kaufland=Kaufland
+grated_cheese=Grated cheese
+lidl=Lidl
+lemonade=Lemonade
+noodles=Noodles
+parmesan=Parmesan
+pizza_dough=Pizza dough
+tomato_paste=Tomato paste
+broccoli=Broccoli
+
