Do edit localisation strings

--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -1,5 +1,5 @@
 dish=Dish
-dishes=Dish
+dishes=Dishes
 ingredient=Ingredient
 ingredients=Ingredients
 about=About
@@ -8,7 +8,6 @@ back=Back
 forward=Forward
 sort=Sort
 add=Add
-change=Change
 remove=Remove
 quit=Quit
 apply=Apply
@@ -16,12 +15,12 @@ warning=Warning
 information=Information
 no_database_driver_available=Database driver not available
 connection_to_database_not_possible=Connection to database not possible
-element_already_available Element is already available
-all_fields_must_be_filled All fields must be filled in
-removing_not_possible Removing is not possible
-adding_not_possible Add is not possible
-changing_not_possible Changing is not possible
-saving_not_possible Saving is not possible
+element_already_available=Element is already available
+all_fields_must_be_filled=All fields must be filled in
+removing_not_possible=Removing is not possible
+adding_not_possible=Add is not possible
+changing_not_possible=Changing is not possible
+saving_not_possible=Saving is not possible
 switch_application_theme=Switch application theme
 application_name=ShoppingListGenerator
 please_restart_application=Please restart the application
@@ -31,7 +30,6 @@ steven_solleder=Steven Solleder
 isabell_waas=Isabell Waas
 steven_solleder_link=https://stevensolleder.de
 isabell_waas_link=https://github.com/isabellwaas
-create=Create
 edit=Edit
 loading_not_possible=Loading not possible
 shopping_list=Shopping List
