--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -25,7 +25,7 @@ switch_application_theme=Switch application theme
 application_name=ShoppingListGenerator
 please_restart_application=Please restart the application
 reset_application=Reset application
-version=Version 2021.1
+version=Version
 steven_solleder=Steven Solleder
 isabell_waas=Isabell Waas
 steven_solleder_link=https://stevensolleder.de
@@ -51,4 +51,9 @@ parmesan=Parmesan
 pizza_dough=Pizza dough
 tomato_paste=Tomato paste
 broccoli=Broccoli
+version_number=2021.1
+search_for_updates=Search for updates
+an_error_occurred=An error occurred
+this_is_the_latest_version=This is the latest version
+newer_version_available=There is a newer version available
 
