--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -51,9 +51,12 @@ parmesan=Parmesan
 pizza_dough=Pizza dough
 tomato_paste=Tomato paste
 broccoli=Broccoli
-version_number=2021.1
 search_for_updates=Search for updates
 an_error_occurred=An error occurred
-this_is_the_latest_version=This is the latest version
 newer_version_available=There is a newer version available
+version_number=2021.1
+this_is_the_latest_version=This is the latest version
+licenses=Licenses
+apache_license_libraries=The Apache License is used by the following libraries used in the code of this application: SQLite JDBC by xerial.org, FlatLaf by JFormDesigner, Apache Commons IO, Apache Commons Lang
+json_license_libraries=The JSON License is used by the following library used in the code of this application: JSON-Java by stleary
 
