Do change two labels and version number in MANIFEST.MF

--- a/src/resources/strings.properties
+++ b/src/resources/strings.properties
@@ -22,10 +22,10 @@ adding_not_possible=Adding is not possible.
 changing_not_possible=Changing is not possible.
 saving_not_possible=Saving is not possible.
 error_solution=Please restart the application and make sure, that no other application is accessing the database. If the problem still occurs, try resetting or reinstalling the application. If nothing resolves the issue, contact the developer.
-switch_application_theme=Switch application theme
+switch_theme=Switch theme
 application_name=ShoppingListGenerator
 please_restart_application=Please restart the application.
-reset_application=Reset application
+reset_data=Reset data
 version=Version
 steven_solleder=Steven Solleder
 isabell_waas=Isabell Waas
